--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
+/* todo lo que respecta a los href entre paginas y el mouse */
 .contactob{
     cursor: pointer;
 }
+a:hover {
+    color: #004AAD;
+}
+
 a{
     text-decoration: none;
     color: inherit;
 }
 
+/*todo lo que respecta a los link entre paginas y el mouse */
+
+
+/* css del menu */
 header {
     display: grid;
     grid-template-columns: 128px 1fr;
@@ -36,6 +45,9 @@ ul li {
     font-weight: 700;
 }
 
+/*css del menu */
+
+/*aqui empieza index*/
 
 .intro {
     display: grid;
@@ -56,6 +68,8 @@ ul li {
     padding-top: 208px
 }
 
+
+/*pagina de inicio*/
 
 .intro p {
     text-align: center;
@@ -99,7 +113,7 @@ ul li {
 
 }
 
-.oficina {
+.oficina1 {
     grid-template-columns: 1fr;
     text-align: center;
 }
@@ -152,6 +166,451 @@ ul li {
     font-weight: 900;
     line-height: normal;
 }
+
+/*aqui termina index*/
+
+/*empieza index 2*/
+.quienes {
+    display: grid;
+    height: 705px;
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(imagenes/fondoquienes.png);
+
+
+}
+
+.quienes h1 {
+    color: #FFF;
+    text-align: left;
+    font-family: Inter;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-left: 130px;
+}
+
+.quienes p {
+    margin-left: 130px;
+    margin-right: 490px;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.quienes h2 {
+    margin-left: 130px;
+    color: #FFA5A4;
+    font-family: Inter;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    padding-bottom: 140px;
+}
+
+.integrantes {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    gap: 10px;
+    padding-top: 60px;
+}
+
+.maria {
+    text-align: center;
+    border-radius: 80px;
+    background: #191D52;
+    width: 690px;
+    height: 950px;
+}
+.perfil1{
+    margin-top: 85px;
+}
+.maria h1 {
+    color: #FFA5A4;
+    text-align: center;
+    font-family: Inter;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.maria h2 {
+    color: #FFF;
+
+    text-align: center;
+    font-family: Inter;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-right: 70px;
+    margin-left: 70px;
+}
+
+.maria p {
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-right: 70px;
+    margin-left: 70px;
+}
+
+.rodrigo {
+    text-align: center;
+    border-radius: 80px;
+    background: #191D52;
+    width: 690px;
+    height: 950px;
+}
+.perfil2{
+    margin-top: 85px;
+}
+.rodrigo h1 {
+    color: #FFA5A4;
+    text-align: center;
+    font-family: Inter;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.rodrigo h2 {
+    color: #FFF;
+
+    text-align: center;
+    font-family: Inter;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-right: 70px;
+    margin-left: 70px;
+}
+
+.rodrigo p {
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-right: 70px;
+    margin-left: 70px;
+}
+
+/*aqui termina index 2*/
+
+/*aqui Empieza index 3 */
+
+.serviciotitulo {
+    position: absolute;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 800;
+    margin-top: 100px;
+    margin-left: 570px;
+    margin-right: 550px;
+
+}
+
+.servicios {
+    display: grid;
+    height: 1700px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(imagenes/fondoservicio.png);
+}
+
+.cajas {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-top: 300px;
+    padding-left: 210px;
+    padding-right: 210px;
+    padding-bottom: 350px;
+    gap: 20px;
+
+}
+
+.logos {
+    width: 500px;
+    height: 500px;
+    border-radius: 60px;
+    background: #FFA5A4;
+}
+
+.logos h2 {
+    display: block;
+    border-radius: 25px;
+    background-color: white;
+    color: #191D52;
+    margin-left: auto;
+    margin-right: auto;
+    margin: 30px;
+    text-align: center;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+}
+
+.logos p {
+    margin-left: 75px;
+    margin-right: 134px;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.plantillas {
+    width: 500px;
+    height: 500px;
+    border-radius: 60px;
+    background: #FFA5A4;
+}
+
+.plantillas h2 {
+    display: block;
+    border-radius: 25px;
+    background-color: white;
+    color: #191D52;
+    margin-left: auto;
+    margin-right: auto;
+    margin: 30px;
+    text-align: center;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+
+}
+
+.plantillas p {
+    margin-left: 75px;
+    margin-right: 134px;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+
+}
+
+.iconografia {
+    width: 500px;
+    height: 500px;
+    border-radius: 60px;
+    background: #FFA5A4;
+}
+
+.iconografia h2 {
+    display: block;
+    border-radius: 25px;
+    background-color: white;
+    color: #191D52;
+    margin-left: auto;
+    margin-right: auto;
+    margin: 30px;
+    text-align: center;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+}
+
+.iconografia p{
+    margin-left: 75px;
+    margin-right: 134px;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.promocion {
+    width: 500px;
+    height: 500px;
+    border-radius: 60px;
+    background: #FFA5A4;
+}
+
+.promocion h2 {
+    display: block;
+    border-radius: 25px;
+    background-color: white;
+    color: #191D52;
+    margin-left: auto;
+    margin-right: auto;
+    margin: 30px;
+    text-align: center;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+
+}
+.promocion p{
+    margin-left: 75px;
+    margin-right: 134px;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+/*aqui termina index 3 */
+
+/* empieza index 4 */
+
+.pdf{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+}
+
+.itesalogo{
+    width: 574px;
+    margin-left: 52px;
+    margin-top: 200px;
+}
+
+.itesa{
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(imagenes/fondopdf.png);
+    height: 1300px;
+}
+
+.itesa p{
+    padding-top: 20px;
+    text-align: left;
+    margin-left: 52px;
+    margin-right: 160px;
+    font-size: 36px;
+    font-weight: 500;
+    color: white;
+}
+
+/* termina index 4 */
+
+/* empieza index 5 */
+
+.intrometo {
+    display: grid;
+    grid-template-columns: 1fr;
+    height: 810px;
+    width: 100%;
+
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(imagenes/fondometodologia.png);
+
+}
+
+.logoblanco3 {
+    height: 79px;
+    width: 195px;
+    padding-left: 617px;
+    padding-top: 208px
+}
+
+
+.intrometo p {
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    color: white;
+}
+
+.oficina2 {
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-bottom: 400px;
+    margin-left: 450px;
+    margin-right: 450px;
+}
+
+.titulometo {
+    margin-top: 80px;
+    color: #000;
+    text-align: center;
+    font-family: Inter;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.titulometo p {
+    color: #000;
+    text-align: center;
+    font-family: Inter;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-left: 300px;
+    margin-right: 300px;
+}
+
+.iconos {
+    width: 1270px;
+    margin-top: 80px;
+}
+
+.metodologías {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 30px;
+    text-align: center;
+    font-size: 36px;
+}
+
+.metodologías p {
+    color: #000;
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+/* termina index 5 */
+
+/*footer de la pagina */
 
 .final {
     background-color: #000000;
